Improved responsiveness and accessibility.

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
           <div class="form-controls">
             <input type="text" name="first-name" autocomplete="name" id="first-name" placeholder="First Name">
             <img src="/images/icon-error.svg" alt="">
-            <span class="error-message">this field cannot be empty</span>
+            <span class="error-message"></span>
           </div>
 
           <div class="form-controls">
             <input type="text" name="last-name" id="last-name" placeholder="Last Name">
             <img src="/images/icon-error.svg" alt="">
-            <span class="error-message">this field cannot be empty</span>
+            <span class="error-message"></span>
           </div>
 
           <div class="form-controls">
             <input type="email" name="email" id="email" placeholder="Email Address" autocomplete="email">
             <img src="/images/icon-error.svg" alt="">
-            <span class="error-message">this field cannot be empty</span>
+            <span class="error-message"></span>
           </div>
 
           <div class="form-controls">
             <input type="password" name="password" id="password" placeholder="Password">
             <img src="/images/icon-error.svg" alt="">
-            <span class="error-message">this field cannot be empty</span>
+            <span class="error-message"></span>
           </div>
 
           <div class="form-controls">
@@ -75,7 +75,7 @@
       Coded by <a href="https://github.com/DrZubby">Dr. Zubby</a>.
     </p>
   </footer>
-  <script src="script.s"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
