changed error images file path to relative link

--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
         <form action="#" method="GET">
           <div class="form-controls">
             <input type="text" name="first-name" autocomplete="name" id="first-name" placeholder="First Name">
-            <img src="/images/icon-error.svg" alt="">
+            <img src="images/icon-error.svg" alt="">
             <span class="error-message"></span>
           </div>
 
           <div class="form-controls">
             <input type="text" name="last-name" id="last-name" placeholder="Last Name">
-            <img src="/images/icon-error.svg" alt="">
+            <img src="images/icon-error.svg" alt="">
             <span class="error-message"></span>
           </div>
 
           <div class="form-controls">
             <input type="email" name="email" id="email" placeholder="Email Address" autocomplete="email">
-            <img src="/images/icon-error.svg" alt="">
+            <img src="images/icon-error.svg" alt="">
             <span class="error-message"></span>
           </div>
 
           <div class="form-controls">
             <input type="password" name="password" id="password" placeholder="Password">
-            <img src="/images/icon-error.svg" alt="">
+            <img src="images/icon-error.svg" alt="">
             <span class="error-message"></span>
           </div>
 
