--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
@@ -18,56 +18,53 @@
 
 <body>
 
-  <div class="container">
-    <div class="article">
-          <h1>
-            Learn to code by watching others
-          <h1>
+  <main>
+      <div class="article">
+        <h1>Learn to code by watching others</h1>
 
-          <p id="left">
-            See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-            but understanding how developers think is invaluable.
-          </p>
-    </div>
+        <p id="left"> See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable</p>
+      </div>
 
     <div>
-        <div id="above-form"><span id="white-bold">Try it free 7 days</span> then $20/mo. thereafter</div>
+      <div id="above-form">
+        <span id="white-bold">Try it free 7 days</span> then $20/month thereafter
+      </div>
 
-        <form action="#" method="GET">
-          <div class="form-controls">
-            <input type="text" name="first-name" autocomplete="name" id="first-name" placeholder="First Name">
-            <img src="images/icon-error.svg" alt="">
-            <span class="error-message"></span>
-          </div>
+      <form action="#" method="GET">
+        <div class="form-controls">
+          <input type="text" name="first-name" autocomplete="name" id="first-name" placeholder="First Name">
+          <img src="images/icon-error.svg" alt="">
+          <span class="error-message"></span>
+        </div>
 
-          <div class="form-controls">
-            <input type="text" name="last-name" id="last-name" placeholder="Last Name">
-            <img src="images/icon-error.svg" alt="">
-            <span class="error-message"></span>
-          </div>
+        <div class="form-controls">
+          <input type="text" name="last-name" id="last-name" placeholder="Last Name">
+          <img src="images/icon-error.svg" alt="">
+          <span class="error-message"></span>
+        </div>
 
-          <div class="form-controls">
-            <input type="email" name="email" id="email" placeholder="Email Address" autocomplete="email">
-            <img src="images/icon-error.svg" alt="">
-            <span class="error-message"></span>
-          </div>
+        <div class="form-controls">
+          <input type="email" name="email" id="email" placeholder="Email Address" autocomplete="email">
+          <img src="images/icon-error.svg" alt="">
+          <span class="error-message"></span>
+        </div>
 
-          <div class="form-controls">
-            <input type="password" name="password" id="password" placeholder="Password">
-            <img src="images/icon-error.svg" alt="">
-            <span class="error-message"></span>
-          </div>
+        <div class="form-controls">
+          <input type="password" name="password" id="password" placeholder="Password">
+          <img src="images/icon-error.svg" alt="">
+          <span class="error-message"></span>
+        </div>
 
-          <div class="form-controls">
-            <button type="submit">Claim your free trial</button>
-          </div>
+        <div class="form-controls">
+          <button type="submit">Claim your free trial</button>
+        </div>
 
-          <div id="below-form">
-            By clicking the button, you are agreeing to our <span id="bold-red">Terms and Services</span>
-          </div>
+        <div id="below-form">
+          By clicking the button, you are agreeing to our <span id="bold-red">Terms and Services</span>
+        </div>
       </form>
     </div>
-  </div>
+  </main>
 
   <footer>
     <p class="attribution">
