--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div>
       <div id="above-form">
-        <span id="white-bold">Try it free 7 days</span> then $20/month thereafter
+        <span id="white-bold">Try it free for 7 days</span> then $20/month thereafter
       </div>
 
       <form action="#" method="GET">
